src/objects/Partner_Commission_Rates__c.object
<CustomObject>
    <description>This custom object allow users to create records to define stand commission rates that are based on a Type of Commission and related to Products (InvoiceIT)</description>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <inlineHelpText>Select the type of order the commission is based on.</inlineHelpText>
        <label>Commission Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner_Agent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Partner / Sales Agent</inlineHelpText>
        <label>Partner / Agent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>KV Partner</value>
            </filterItems>
            <infoMessage>This currently looks up to KV Partners. The value entered does not exist or does not match filter criteria. Remove filter criteria to search all accounts.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Commission Rates</relationshipLabel>
        <relationshipName>Partner_Commission_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This looks up to the InvoiceIT Product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Partner Commission Rates</relationshipLabel>
        <relationshipName>Partner_Commission_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Comm__c</fullName>
        <inlineHelpText>Enter the standard commission for this Partner Agent for the selected Product for all subsequent years after year 1</inlineHelpText>
        <label>Standard Comm (after Yr1)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year1_Commission__c</fullName>
        <inlineHelpText>Commission for Year 1. This is specific to Rentals and Subscriptions</inlineHelpText>
        <label>Year1 Commission</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Partner Commission Rates</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCR-{0000}</displayFormat>
        <label>Partner Commission Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Commission Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>